@@ -9,4 +9,4 @@ Requested Functionality to add:
 - Visual Column mode
 - More fold region support
 - Window support (need access to splitter)
-- Text objects (visual and operator modes)
+
